# jphfmt

./: .clang-format  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  FORMATTER_HANDOFF.md  PUBLISH.md  README.md  _typos.toml  flake.nix  showcase.c  tasks.py
.cargo/: mutants.toml
.claude/: settings.json
.github/workflows/: ci.yaml  ci.yml  hr-fix-probe.yaml  mutants.yaml  release.yml  review.yaml
editors/vscode/: .vscodeignore  README.md  bundle.mjs  eslint.config.mjs  knip.json  package-lock.json  package.json  tsconfig.json
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  outcomes.json  timeout.txt  unviable.txt
mutants.out.old/diff/: src__doc.rs_line_115_col_5_001.diff  src__doc.rs_line_121_col_25.diff  src__doc.rs_line_124_col_22_001.diff  src__doc.rs_line_12_col_5.diff  src__doc.rs_line_12_col_5_001.diff  src__doc.rs_line_131_col_22_002.diff  src__doc.rs_line_134_col_27_001.diff  src__doc.rs_line_148_col_31.diff  src__doc.rs_line_158_col_33.diff  src__doc.rs_line_160_col_22_002.diff  src__doc.rs_line_40_col_9.diff  src__doc.rs_line_43_col_9.diff  src__doc.rs_line_46_col_9.diff  src__doc.rs_line_63_col_5.diff  src__doc.rs_line_63_col_5_001.diff  src__doc.rs_line_77_col_51.diff  src__doc.rs_line_90_col_33_001.diff  src__lexer.rs_line_58_col_5.diff  src__lexer.rs_line_64_col_5.diff  src__lexer.rs_line_65_col_53.diff  src__lexer.rs_line_65_col_53_001.diff  src__lexer.rs_line_78_col_5_001.diff  (+452 more)
src/: doc.rs  lexer.rs  lib.rs  main.rs  reflow.rs
tests/: cases.rs  conformance.rs  golden.c  messy.c  properties.proptest-regressions  properties.rs
(+280 files in other folders)
