[package]
name = "jphfmt"
version = "0.1.5"
edition = "2024"
rust-version = "1.88"
authors = ["J.P. Hutchins <jphutchins@gmail.com>"]
description = "A zero-config, opinionated C formatter: one uniform bracket rule, no column alignment."
license = "Apache-2.0"
repository = "https://github.com/JPHutchins/jphfmt"
readme = "README.md"
keywords = ["formatter", "c", "cli", "gofmt", "opinionated"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "editors",
    ".github",
    ".claude",
    ".camas",
    ".mcp.json",
    "tasks.py",

]

[lib]
name = "jphfmt"
path = "src/lib.rs"

[[bin]]
name = "jphfmt"
path = "src/main.rs"

[dependencies]
logos = "0.16.1"

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic lints that are noise for this codebase rather than slop signals.
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
assigning_clones = "allow"
